# cloud-bot

./: .env.example  .gitignore  BOT_ARCHITECTURE.md  IMPLEMENTATION_GUIDE.md  MIGRATION_GUIDE.md  Makefile  POLLING_OPTIMIZATION.md  README_POSTGRESQL.md  UPGRADE_SUMMARY.md  alembic.ini  apply_file_deletion_fix.py  bot.db  create_admin.py  create_super_admin.py  fix_postgresql_sequences.py  main.py  migrate_to_postgresql.py  pyproject.toml  requirements.txt  res_admin.py  setup_postgresql.py  update_file_sizes.py  verify_postgresql.py  verify_search.py
app/api/: auth.py  main.py
app/api/routes/: admin_logs.py  admin_settings.py  admins.py  auth.py  dashboard.py  files.py  fsub.py  (+1 more)
app/bot/: __init__.py  helpers.py  main.py  polling.py  translations.py  webhook.py
app/core/: config.py  database.py  redis_client.py  tasks.py
app/models/: base.py  crud.py  health.py  permissions.py  settings.py
app/tasks/: file_processing.py
app/templates/: admin_logs.html  admins.html  base.html  dashboard.html  files.html  fsub.html  login.html  settings.html  users.html
app/utils/: monitoring.py  retry.py
migrations/: add_blocked_at_column.sql  env.py  fix_file_deletion.sql
migrations/versions/: 1db328bdb10b_add_is_admin_field_to_user_model.py  51bc248a7ffe_migration_nomi.py  52e4c2040518_add_file_size_to_files.py  9bec3d713d07_initial_migration.py  bc95e2ae559b_add_admin_permissions_to_users.py  cbedcebbaf34_add_processed_file_id_to_files.py  dabf14471202_add_file_name_to_files.py  e4f8c9a2b1d3_add_blocked_at_field_to_users.py  f5e8c6d91c91_add_file_size_to_files.py
(+24 files in other folders)
